Added dynamic functionality

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -2,11 +2,11 @@
 
 .card {
     margin-top: 3vh;
-    border: solid black 1px;
     min-width: 200px;
     padding: 10px;
     flex-wrap: wrap;
     font-family: 'Single Day', cursive;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     
 }
 
@@ -21,12 +21,15 @@ input {
     min-width: 300px;
     height: 50px;
     border-radius: 12px 0 0 12px;
+    border: 1px solid;
+    padding: 2px;
 }
 
 button {
     height: 56px;
     border-radius: 0 12px 12px 0;
     width: 80px;
+    border: 1px solid;
 }
 
 .card img {
@@ -37,6 +40,7 @@ button {
 .details {
     display: flex;
     align-items: center;
+    margin-bottom: 12px;
     
 }
 
@@ -58,5 +62,7 @@ ul {
 }
 
 .down {
-    
+    font-size: .8rem;
+    display: flex;
+    justify-content: space-around;
 }
