Added dynamic functionality

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -9,10 +9,14 @@
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     
 }
-
- .loading img{
+.loading {
     height: 50px;
     width: 50px;
+}
+
+ .loading img{
+   height: 100%;
+   width: 100%;
 }
 
 
