--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -2,37 +2,46 @@
 
 .card {
     margin-top: 3vh;
-    min-width: 200px;
+    min-width: 300px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     font-family: 'Single Day', cursive;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    
+    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+    background: white;
+    border-radius: 12px;
 }
 .loading {
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border-radius: 50px;
+    overflow: hidden;
 }
 
- .loading img{
-   height: 100%;
-   width: 100%;
+.loading img{
+    height: 100%;
+    width: 100%;
 }
 
 
 
 input {
-    min-width: 300px;
+    min-width: 250px;
     height: 50px;
     border-radius: 12px 0 0 12px;
     border: 1px solid;
     padding: 2px;
+    padding-left: 15px;
 }
 
 button {
     height: 56px;
     border-radius: 0 12px 12px 0;
-    width: 80px;
+    /* width: 80px; */
     border: 1px solid;
 }
 
@@ -63,10 +72,15 @@ ul {
 
 .degree {
     color: rgb(207, 28, 97);
+    font-size: 1rem;
 }
 
 .down {
     font-size: .8rem;
     display: flex;
     justify-content: space-around;
+}
+
+.name {
+    line-height: 32px;
 }
