--- a/src/Components/Weather/Weather.css
+++ b/src/Components/Weather/Weather.css
@@ -1,4 +1,18 @@
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .cardData {
     margin-top: 12px;
-    background: white;
+    /* background: white; */
+}
+
+.suggestion {
+    height: 200px;
+    /* border: solid black 1px; */
+    width: 100%;
+    text-align: center;
+    color: rgb(106, 236, 92);
 }
